feat: implement catalogue and inventory database model